Initial commit: EXO Digital Studio

--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
   <meta name="twitter:description" content="Innovación que Conecta">
   <meta name="twitter:image" content="./EXOlogo.png">
   
-  <!-- Favicon -->
+  <!-- Favicon y PWA -->
   <link rel="icon" type="image/png" href="./EXOlogo.png">
+  <link rel="apple-touch-icon" href="./EXOlogo.png">
+  <link rel="manifest" href="./manifest.json">
+  <meta name="theme-color" content="#00d4ff">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="EXO">
   
   <!-- Preconnect para fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
